# serializer version: 1
# name: TestStepPerturbImageFactory.test_iteration[DummyPerturber-param1-1.0]
  dict({
    'param1': 1,
    'param2': 2,
  })
# ---
# name: TestStepPerturbImageFactory.test_iteration[DummyPerturber-param2-3.0]
  dict({
    'param1': 1,
    'param2': 3,
  })
# ---
